# recruitment-flask-template

./: .gitignore  Dockerfile  README.md  database.py  database.sqlite  main.py  models.py  pyproject.toml
